# quantbullet

./: .Rprofile  .coverage  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  pytest.ini  quantbullet_dev_init.sh  requirements.txt
.cursor/rules/: python-env.mdc
docs/: Makefile  conf.py  example.ipynb  index.md  make.bat
docs/_safe/: file_mapping.yml.enc
docs/experiments/: confi_int.ipynb  downsampling_correction.md  linear_product_classifier_prod.ipynb  linear_product_classifier_test_single_group.ipynb  linear_product_error_model.ipynb  linear_product_reg_model_params_test single.ipynb  linear_product_reg_model_params_test.ipynb  linear_product_reg_model_prod.ipynb  linear_product_regressor_model_prod.ipynb  lprm_bcd.pkl  model-components-testing.ipynb  model-config.ipynb  mtg_perf_eval_test.ipynb  parametric_model.ipynb  pdfreport.ipynb  piecewise_linear.ipynb  piecewise_linear_dev.ipynb  piecewise_log_sum_prod.ipynb  piecewise_product-prod.ipynb  polars.ipynb  reportlab-test.ipynb  sampling.ipynb  sampling_comparison.R  test  test-model-components.json  test-scale-method.ipynb  test.ipynb  test_resi_data_clean.ipynb  testcache  testing.ipynb
docs/linear_product_model/: classifier_prod.ipynb  classifier_test_single_group.ipynb  linear_product_model_diagnostics.ipynb  model_diagnostics.ipynb  test-scale-method.ipynb
docs/model/: knn-distance-comparable-test.ipynb  knn-rolling-window-backtest.ipynb  last_value_estimator.ipynb  pygam-example.ipynb  testing_dev.ipynb  time_weighted_wrapper.ipynb  weighted-distance-knn.ipynb
docs/model_selection/: xgboost_grid_search_9600.csv  xgboost_grid_search_9600.pkl  xgboost_optuna_study.pkl  xgboost_prod.ipynb
docs/plot/: plot-testing.ipynb  plot_dev.ipynb
docs/reporting/: pdfreport.ipynb
docs/research/: 20240210-ts-momentum-note.md  bac_lambda_hist.json  bac_testing_by_lambda.pickle  bac_testing_by_lambda_2.pickle  bac_testing_by_lambda_3.pickle  constrained-ols.ipynb  fama_french_five_factors_20180101_20231231.pkl  jump_model_dev.ipynb  jump_model_prod.ipynb  momentum_dev.ipynb  price_analysis.ipynb  tsla_20180101_20231231.pkl
docs/rpy2/: test.ipynb  test_mgcv.ipynb  test_mgcv_r.R
docs/tsa/: CPI.dat.csv  IP.dat.csv  arima_dev.ipynb  foot_traffic.csv  var_dev.ipynb  vecm_dev.ipynb  widget_sales.csv
docs/utils/: df-tricks.ipynb  encrypt.ipynb  excel-writer-beta.ipynb  excel-writer.ipynb  fake_bond_trades.xlsx  html.ipynb  loan-history-impute.ipynb  plotting.ipynb  rolling-window-backtest.ipynb  testing.ipynb
r/: install_pkgs.R  install_renv.R
scripts/: diag_env.py
src/quantbullet/: __init__.py  global_utils.py  log_config.py
test_cache/: mappings.db
tests/: test_backtest.py  test_jump_model.py  test_mean_reversion.py  test_model.py  test_model_selection.py  test_momentum.py  test_validation.py
tests/backtest/: test_account.py  test_backtest.py  test_position.py
tests/bespoke/: test_logging.py  test_module.py  test_price_bucket_returns.py
tests/db/: test_security_reference.py
tests/dfutils/: test_df_filter.py
tests/linear_product_model/: _test_interaction.ipynb  test_classifier.py  test_component_manager.py  test_error_model.py  test_interaction.py  test_mtg_perf_eval.py  (+3 more)
(+297 files in other folders)
