[tool.poetry]
name = "quantbullet"
version = "0.1.1"
description = "Toolkit for swift quant analysis"
authors = ["Yiming Zhang"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
matplotlib = "^3.7.3"
cvxpy = "^1.3.2"
pandas = "^2.1.0"
scikit-learn = "^1.3.0"
tqdm = "^4.66.1"
statsmodels = "^0.14.0"
importlib-resources = "^6.1.0"
xgboost = "^2.0.2"
seaborn = "^0.13.0"
optuna = "^3.4.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.1"
pytest-cov = "^4.1.0"
myst-nb = {version = "^0.17.2", python = "^3.9"}
sphinx-autoapi = "^2.1.1"
sphinx-rtd-theme = "^1.3.0"
pydata-sphinx-theme = "^0.14.1"
nbsphinx = "^0.9.3"
yfinance = "^0.2.30"
pandas-datareader = "^0.10.0"
setuptools = "^69.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
