[tool.poetry]
name = "quantbullet"
version = "0.1.1"
description = "Toolkit for swift quant analysis"
authors = ["Yiming Zhang"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/YimingZhang07/quantbullet"
repository = "https://github.com/YimingZhang07/quantbullet"
keywords = ["quantitative-finance", "statistics", "regime-switching", "backtesting"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Office/Business :: Financial",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[tool.poetry.dependencies]
python = ">=3.10"
matplotlib = "^3.8"
cvxpy = "^1.4"
pandas = "^2.1"
polars = "^1.0"
scikit-learn = "^1.4"
tqdm = "^4.66"
statsmodels = "^0.14"
xgboost = "^2.0"
seaborn = "^0.13"
optuna = "^3.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"
myst-nb = {version = "^0.17.2", python = "^3.10"}
sphinx-autoapi = "^2.1"
pydata-sphinx-theme = "^0.15"
yfinance = "^0.2"
pandas-datareader = "^0.10"
setuptools = "^69.1"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
